# System-Perfomance

./: .replit  README.md  app.py  database.py  pyproject.toml  replit.md
attached_assets/: Pasted-Plan-a-System-Performance-Monitoring-Dashboard-Full-Project-Planner-You-are-a-senior-software-arch-1751330136413_1751330136414.txt
components/: ai_assistant.py  alerts.py  auth.py  dashboard.py  data_collector.py  ml_predictor.py
data/: system_metrics.csv
utils/: data_storage.py  helpers.py
